# ayon-perforce

./: .gitignore  CHANGELOG.md  README.md  create_package.py  pyproject.toml  version.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
client/: pyproject.toml
client/ayon_perforce/: README.md  __init__.py  addon.py  version.py
client/ayon_perforce/hooks/: pre_p4_sync.py
server/: __init__.py  settings.py
