[tool.poetry]
name = "ayon-perforce"
description = "perforce addon for ayon"
version = "0.4.1"
authors = ["LoopsCreativeStudio <tech@loopscreativestudio.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage  = "https://loopscreativestudio.com/"
keywords = ["cg", "production", "perforce", "ynput", "version control", "ayon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Version Control",
]

[tool.poetry.urls]
Changelog = "https://github.com/LoopsCreativeStudio/ayon-perforce/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.9.1,<3.10"

[tool.semantic_release]
logging_use_named_masks = true
tag_format = "v{version}"
commit_parser = "angular"
commit_author = "github-actions <actions@github.com>"
commit_message = "release: {version} [skip ci]"
major_on_zero = true
assets = []
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variables = ["version.py:__version__"]

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false
prerelease_token = "rc"

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true